[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2021"
name = "netc"
version = "0.1.0"

[dependencies]
base64 = "0.13"
bytes = "1.1"
rscl = "0.1"
thiserror = "1.0"
tokio = {version = "1", features = ["net", "io-util"]}
tokio-rustls = "0.23"
url = "2.2"
webpki-roots = "0.22"

[dev-dependencies]
dotenv = "0.15"
once_cell = "1.9"
tokio = {version = "1", features = ["full"]}
