[package]
authors = ["serbe <serbenv@gmail.com>"]
description = "Rust http client library"
edition = "2021"
name = "netc"
version = "0.1.9"
readme = "README.md"
repository = "https://github.com/serbe/netc/"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.21"
bytes = "1.4"
futures = "0.3"
rand = "0.8"
rscl = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "io-util"] }
tokio-rustls = "0.24"
url = "2.4"
webpki-roots = "0.25"

[dev-dependencies]
dotenv = "0.15"
httpmock = "0.6"
once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
