[package]
authors = ["serbe <serbenv@gmail.com>"]
description = "Rust http client library"
edition = "2021"
name = "netc"
version = "0.1.10"
readme = "README.md"
repository = "https://github.com/serbe/netc/"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22"
bytes = "1"
futures = "0.3"
rand = "0.9"
rscl = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["net", "io-util"] }
tokio-rustls = "0.26"
url = "2.5"
webpki-roots = "1"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
